# Quaternions-and-OpenGL-modeling

./: .gitignore  Block.cpp  CMakeLists.txt  Camera.cpp  Map.cpp  Quaternion.cpp  README.md  main.cpp  matrices.cpp
include/: Block.h  Camera.h  Map.h  Quaternion.h  Skybox.h  matrices.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
